<resources>
    <string name="app_name">Smart Waste Management System</string>
    <string name="title_activity_main">Smart Waste Management System</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo">LOGO</string>
    <string name="login_button">Login</string>
    <string name="title_activity_user_dashboard">UserDashboard</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="location">Location</string>
    <string name="load_location">Load Location</string>
    <string name="address">address</string>
    <string name="zip">zip</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
</resources>

