<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".UserDashboard"
    tools:showIn="@layout/activity_user_dashboard">

    <RelativeLayout
    android:layout_width="395dp"
    android:layout_height="659dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:fitsSystemWindows="true"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:text="@string/location"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/location_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zip"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitude"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitude"
            android:importantForAutofill="no"
            tools:targetApi="o" />

    </LinearLayout>
</RelativeLayout>
</android.support.constraint.ConstraintLayout>